// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should handle import * as assert from 'assert' 1`] = `
"import * as assert from 'assert';
assert(true, "top level assertion");
export function shouldRemove() {
    assert(x > 0, "x must be positive");
    const result = compute();
    assert(result !== null, "result cannot be null");
    return result;
}
"
`;

exports[`Should handle import { assert, fail } from 'assert' 1`] = `
"import { assert, fail } from 'assert';
assert(true, "top level assertion");
fail("should not reach here");
export function shouldRemove() {
    assert(x > 0, "x must be positive");
    const result = compute();
    assert(result !== null, "result cannot be null");
    fail("unreachable");
    return result;
}
"
`;

exports[`Should handle import { fail } and import * as assert 1`] = `
"import { fail } from 'assert';
import * as assert from 'assert';
assert(true, "top level assertion");
fail("should not reach here");
export function shouldRemove() {
    assert(x > 0, "x must be positive");
    const result = compute();
    assert(result !== null, "result cannot be null");
    fail("unreachable");
    return result;
}
"
`;

exports[`Should handle import from 'node:assert' 1`] = `
"import assert from 'node:assert';
assert(true, "top level assertion");
export function shouldRemove() {
    assert(x > 0, "x must be positive");
    const result = compute();
    assert(result !== null, "result cannot be null");
    return result;
}
"
`;

exports[`Should handle separate import { assert } and import { fail } 1`] = `
"import { assert } from 'assert';
import { fail } from 'assert';
assert(true, "top level assertion");
fail("should not reach here");
export function shouldRemove() {
    assert(x > 0, "x must be positive");
    const result = compute();
    assert(result !== null, "result cannot be null");
    fail("unreachable");
    return result;
}
"
`;

exports[`Should load remove-assert wasm plugin correctly 1`] = `
";
export function shouldRemove() {
    ;
    const result = compute();
    ;
    return result;
}
export function locallyDefinedAssert() {
    const assert = ()=>{};
    assert(true);
}
export function capturedAssert() {
    const assert = ()=>{};
    function innerFunc() {
        assert(true);
    }
}
export function overrideInParam(assert) {
    assert(true);
}
export function complexLogic() {
    if (x > 0) {
        ;
        process(x);
    }
    const arr = [
        1,
        2,
        3
    ];
    ;
    return arr;
}
"
`;
